# vulnspot

./: .gitignore  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: publish.yml
app/: database.py  logger.py  main.py
app/api/: containers.py  images.py  scans.py
app/models/: database.py  schemas.py
app/services/: docker.py  image_analyzer.py  scanner.py  view_logic.py
app/static/css/: style.css
templates/: base.html  index.html  scan_details.html
