[project]
name = "grypeui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker==7.1.0",
    "fastapi==0.115.12",
    "jinja2==3.1.6",
    "pydantic==2.11.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "ruff>=0.11.8",
    "sqlalchemy==2.0.40",
    "uvicorn[standard]==0.34.2",
]
